--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,5 +6,6 @@ homepage: http://github.com/0xor1/purity_oauth2
 environment:
   sdk: '>=1.3.0+6 <2.0.0'
 dependencies:
-  purity: '>=0.7.1 <0.8.0'
+  oauth2: any
+  purity: '>=0.9.0 <0.10.0'
   unittest: any
