--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,6 @@ homepage: http://github.com/0xor1/purity_oauth2
 environment:
   sdk: '>=1.3.0+6 <2.0.0'
 dependencies:
-  oauth2: any
+  oauth2: '>=0.9.2 <0.10.0'
   purity: '>=0.9.0 <0.10.0'
-  unittest: any
+  unittest: '>=0.11.0 <0.12.0'
