--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: purity_oauth2
-version: 0.7.2
+version: 0.8.0
 author: Daniel Robinson <daniel.robinson.dart@gmail.com>
 description: An OAuth2 library for the Purity framework
 homepage: http://github.com/0xor1/purity_oauth2
@@ -7,5 +7,6 @@ environment:
   sdk: '>=1.3.0+6 <2.0.0'
 dependencies:
   oauth2: '>=0.9.2 <0.10.0'
-  purity: '>=0.10.1 <0.11.0'
+  purity: '>=0.14.0 <0.16.0'
+dev_dependencies:
   unittest: '>=0.11.0 <0.12.0'
