--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,22 @@
 name: purity_oauth2
-version: 0.10.0
+version: 0.11.0
 author: Daniel Robinson <daniel.robinson.dart@gmail.com>
 description: An OAuth2 library for the Purity framework
 homepage: http://github.com/0xor1/purity_oauth2
 environment:
   sdk: '>=1.3.0+6 <2.0.0'
 dependencies:
+  browser: any
+  core_elements: '>=0.2.0 <0.3.0'
   oauth2: '>=0.9.2 <0.10.0'
-  purity: '>=0.18.0 <0.19.0'
+  paper_elements: '>=0.2.0 <0.3.0'
+  polymer: '>=0.14.0 <0.15.0'
+  purity: '>=0.19.0 <0.20.0'
 dev_dependencies:
   unittest: '>=0.11.0 <0.12.0'
+transformers:
+- polymer:
+    entry_points:
+    - web/index.html
+    - test/integration/index_with_purity.html
+    - test/integration/index_without_purity.html
