--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ homepage: http://github.com/0xor1/purity_oauth2
 environment:
   sdk: '>=1.3.0+6 <2.0.0'
 dependencies:
-  browser: any
+  browser: '>=0.10.0+2 <0.11.0'
   core_elements: '>=0.2.0 <0.3.0'
   oauth2: '>=0.9.2 <0.10.0'
   paper_elements: '>=0.2.0 <0.3.0'
